--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -55,6 +55,7 @@ In summary, the content is transferred by comparing entire convolutional layer o
 %\end{description}
 
 
+\pagebreak
 \chapter{Experiments Hebbian Learning}\chlbl{exp_hebb_learning}
 I used different variants of Hebbian Learning with the goal of generating good latent representations of visual scenes.
 However, all preliminary experiments with different implementations were not promising.
