--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -28,7 +28,7 @@ However, such DL system are usually good at one ore a few closely related tasks.
 In fact, they have they have some crucial flaws by definition (c.f. Section \secref{limitationsDL}) which cannot be resolved for sure in the current DL framework.
 One of the Godfathers of Deep Learning is the Turing Award winner Geoffrey Hinton. 
 Especially his contribution to back propagation (c.f. Section \secref{ann}) has shaped the field.
-Back propagation is \emph{the} core learning algorithm of DL systems and was developed in 1986.
+Back propagation is \emph{the} core learning algorithm of DL systems and was developed in 1986. TODO ADD SOURCE!
 More than 30 years later, in 2017, Hinton says that he is ``deeply suspicious'' about back propagation and in his view we have to ``throw it all away and start again'' to improve current systems fundamentally \sidecite{axios_hinton}.
 Considering what DL systems have achieved, this seems a bit extreme.
 However, it also shows that the current learning algorithm of such systems has serious flaws.
@@ -163,7 +163,7 @@ Over time, the number of active neurons in the visual cortex decreases.
 For example, in the visual cortex of mice are more than 75\% of the neurons active before the first opening of the eyes, 36\% after the opening of the eyes and only 12\% in adulthood \sidecite{Rochefort_Garaschuk_Milos_Narushima_Marandi_Pichler_Kovalchuk_Konnerth_2009}.
 Thus, a sparsification of neuronal activations takes place through visual experience.
 In the field of Deep Learning, sparisty is often interpreted in two different forms; sparse weight matrices and sparse activation matrices.
-Sparse weight matrices are often chosen to make models smaller or to increase inference speed \cite{Louizos_Welling_Kingma_2018, Nun_Dryden_Peste_2021}.
+Sparse weight matrices are often chosen to make models smaller or to increase inference speed \cite{Louizos_Welling_Kingma_2018, Hoefler_Alistarh_Ben_Nun_Dryden_Peste_2021}.
 From a biological point of view, this process of first creating a large network and then shrinking it is obviously not plausible\sidenote{otherwise we would have a large brain at the beginning, which becomes smaller by factors in the course of time}.
 Sparse activations, on the other hand, can increase robustness \cite{Panousis_Chatzis_Theodoridis_2021}.
 Intuitively, sparse activations enforce that only the most relevant information is passed to the subsequent layer.
