--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -376,7 +376,7 @@ In the following, I use the categorisation according to Hospedales et al. \cite{
    \item[Meta-Objective] What the goal of the \emph{meta-learning} algorithm is.
 \end{description}
 
-The first dimension of the meta-learning landscape is the \bf{meta-representation}.
+The first dimension of the meta-learning landscape is the \textbf{meta-representation}.
 Meta-representations describe which part of the learning strategy should be learned.
 One possibility is to learn good \emph{initial parameters} that can be used by the model during \emph{base learning}.
 Good initial parameters are only a few gradient steps away from a set of parameters that can solve a task $\mathcal{T}$ drawn from a set of tasks $p(\mathcal{T})$.
@@ -387,7 +387,7 @@ Therefore, many approaches focus on isolating a subset of parameters to meta-lea
 A special case of the black-box models are the approaches based on \emph{metric learning}\sidenote{an explanation why this approach can be considered black-box learning is provided by Hospedales et al. \cite{Hospedales_Antoniou_Micaelli_Storkey_2021}}.
 The outer \emph{meta-learning} process optimizes a model to transform inputs into representations that can be used for recognition by similarity comparison (e.g. by using cosine similarity or euclidean distance) \cite{10-5555-3294996-3295163, qiao2018few, Chen_Liu_Kira_Wang_Huang_2020}.
 
-Other approaches learn the \emph{optimizer} of the inner \emph{base learning} algorithm \cite{ravi2016optimization, ravi2016optimization, Li_Malik_2016, Li_Zhou_Chen_Li_2017}.
+Other approaches learn the \emph{optimizer} of the inner \emph{base learning} algorithm \cite{ravi2016optimization, Li_Malik_2016, Li_Zhou_Chen_Li_2017}.
 Typically, such approaches generate each optimization step of the \emph{base learning} algorithm based on the models parameter and a given base objective function.
 The trainable component can for example be simple hyper-parameters such as the learning rate \cite{Li_Zhou_Chen_Li_2017} or more sophisticated such as pre-conditioned matrices \cite{Park_Oliva_2020}.
 Even the learning algorithm itself can be learned \sidecite{kirsch2021meta}.
@@ -396,16 +396,15 @@ The outer \emph{meta-learning} algorithm can also be used to learn the \emph{inn
 Such loss-learning approaches output a scalar value that is treated as loss by the inner optimizer based on relevant quantities such as prediction/ground truth pairs or model parameters.
 Common goals of this approach are to obtain a loss that has less local minima \cite{NEURIPS2018_7876acb6, Sung_Zhang_Xiang_Hospedales_Yang_2017}, provides better generalization \cite{NEURIPS2018_b9a25e42, NEURIPS2019_e0e2b58d, gonzalez2020improved}, leads to more robust models \cite{li2019feature}, or to learn from unlabelled data \cite{NEURIPS2019_6018df18, Boney2018SemiSupervisedFL}.
 
-Other approaches use the outer \emph{meta-learning} to learn \emph{network architectures} for the inner \emph{base learning}.
+Other approaches use the outer \emph{meta-learning} loop to learn \emph{network architectures} for the inner \emph{base learning} cycle.
 Some approaches use reinforcement learning in the outer loop to learn CNN architectures \cite{zoph2017neural}, while other approaches use evolutionary algorithms to learn the topology of LSTM cells \cite{Bayer_Wierstra_Togelius_Schmidhuber_2009} or to model the network by a graph of network-blocks \cite{10-1609-aaai-v33i01-33014780}.
 
 The outer \emph{meta-learning} loop can also meta-learn hyper-parameters such as regularization-strength \cite{pmlr-v80-franceschi18a, Micaelli_Storkey_2021}, task-relatedness for multi-task learning \cite{10-5555-3305381-3305502}, or sparsity-strength \cite{10-5555-3305381-3305502}. Furthermore, it can meta learn suitable data augmentation methods \cite{Cubuk_2019_CVPR, Li_Hu_Wang_Hospedales_Robertson_Yang_2020}, or improve the selection process for the samples of a mini-batch \cite{10-1609-aaai-v33i01-33015741, fan2018learning}.
 Even the dataset itself can be learned with dataset distillation; A rather large datasets can be summarized a smaller dataset with only a few support images \cite{Wang_Zhu_Torralba_Efros_2020, pmlr-v108-lorraine20a} that still allow good generalization on real test images. In sim2real learning \cite{Andrychowicz_Baker_Chociej_Józefowicz_McGrew_Pachocki_Petron_Plappert_Powell_Ray_2020}, also the graphics engine \cite{ruiz2018learning, Vuong_Vikram_Su_Gao_Christensen_2019} can be trained in an outer loop so that the performance on real-world data is maximized.
 
-
-The second dimension of the meta-learning landscape is the \bf{meta-optimizer}.
+The second dimension of the meta-learning landscape is the \textbf{meta-optimizer}.
 The meta-optimizer describes how the algorithm in the outer \emph{meta-learning} loop is learned.
-Many methods use backpropagation of error and gradient descent (c.f. Section \seqref{ann}) to optimize the meta parameters \cite{ravi2016optimization, 10-5555-3305381-3305498, li2019feature, 10-5555-3305381-3305502, pmlr-v80-franceschi18a, Micaelli_Storkey_2021, 189, pmlr-v108-lorraine20a}.
+Many methods use backpropagation of error and gradient descent (c.f. Section \secref{ann}) to optimize the meta parameters \cite{ravi2016optimization, 10-5555-3305381-3305498, li2019feature, 10-5555-3305381-3305502, pmlr-v80-franceschi18a, Micaelli_Storkey_2021, pmlr-v108-lorraine20a}.
 However, this algorithm has some well-known downsides (c.f. Section XXXXXXXXXX) and requires differentiability.
 When the inner \emph{base learning} algorithm includes non-differentiable steps \cite{Cubuk_2019_CVPR} or the outer meta objective function is non-differentiable \cite{huang2019addressing}, many methods utilize the RL paradigm to optimize the outer objective \cite{Duan_Schulman_Chen_Bartlett_Sutskever_Abbeel_2016}.
 However, using RL to alleviate requirement for differentiability is usually computationally very costly.
@@ -415,7 +414,7 @@ The downside of evolutionary algorithms is that often a large population size is
 These three learning methods are also used in conventional machine learning.
 However, meta-learning comparatively uses RL and evolutionary algorithms more frequently as some components are often non-differentiable in the meta-learning setup.
 
-The third dimension of the meta-learning landscape is the \bf{meta-objective}.
+The third dimension of the meta-learning landscape is the \textbf{meta-objective}.
 The meta-objective describes what the goal of the meta-learning algorithm is.
 Typically, the performance of a meta-learning algorithm is evaluated with a metric on the inner loop or a meta-metric on the outer loop.
 However, there are several design options within the meta-learning framework.
